# bramblekeep

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLA.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSING.md  README.md  RELEASE_NOTES.md  build.rs  deny.toml  docker-compose.yml  install.sh
.github/: CONTRIBUTING.md  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  release.yml
deploy/: bramblekeep.service  install.sh
migrations/: 0001_init.sql  0002_page_metadata.sql  0003_auth.sql  0004_sharing.sql  0005_item_invites.sql  0006_search_fts.sql  0007_page_tree.sql  0008_databases.sql  0009_item_updated.sql  0010_page_activity.sql  0011_history.sql  0012_roles.sql  0013_avatar.sql  0014_one_owner.sql  0015_trash.sql  0016_invite_requests.sql  0017_public_pages.sql  0018_publication_subtree.sql  0019_onboarding.sql  0020_language.sql  0021_favorites.sql  0022_notifications.sql  0023_app_settings.sql
scripts/: build.sh  dev.sh
src/: config.rs  db.rs  embed.rs  error.rs  lib.rs  mail.rs  main.rs  ratelimit.rs
src/auth/: mod.rs
src/core/: mod.rs
src/files/: mod.rs
src/routes/: mod.rs
src/search/: mod.rs
src/store/: mod.rs
src/sync/: mod.rs  projection.rs
src/update/: mod.rs
tests/: admin.rs  databases.rs  delete_item.rs  duplicate.rs  favorites.rs  health.rs  history.rs  invite_requests.rs  invites.rs  notifications.rs  oversight.rs  page_tree.rs  permissions.rs  projection_invariant.rs  projection_text.rs  public_pages.rs  rate_limit.rs  search.rs  security_headers.rs  sidebar_order.rs  sync_hub.rs  sync_restart.rs  sync_ws_gate.rs  trash.rs  update_check.rs
tests/common/: mod.rs
web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
(+67 files in other folders)
