[package]
name = "bramblekeep"
version = "0.3.0"
edition = "2024"
description = "Bramblekeep — unified, self-hosted, single-binary workspace"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
yrs = "0.23"
futures-util = "0.3"
bytes = "1"
sha2 = "0.10"
hex = "0.4"
infer = "0.16"
time = "0.3"
tower-http = { version = "0.6", features = ["trace", "compression-gzip"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = "8"
mime_guess = "2"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
ts-rs = { version = "10", features = ["uuid-impl"] }
axum-extra = { version = "0.10", features = ["cookie"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
dotenvy = "0.15.7"
# Minimal blocking HTTP client (rustls, no OpenSSL → self-contained binary) for update
# checking. Called via spawn_blocking from the background task.
ureq = { version = "2", default-features = false, features = ["tls"] }
# Update application (P2): minisign signature verification (pure Rust) +
# atomic self-replacement of the current executable.
minisign-verify = "0.2"
self-replace = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
